[DATALAB-2090]: Fixed sticky footer on audit/billing on safari

--- a/services/self-service/src/main/resources/webapp/src/app/administration/management/management-grid/management-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/administration/management/management-grid/management-grid.component.scss
@@ -18,6 +18,7 @@
  */
 
 .managment-wrapper{
+  position: relative;
   height: calc(100vh - 130px);
   scroll-behavior: smooth;
   margin-left: -15px;
